--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <title>Js Constructor</title>
 </head>
 <body>
-<h3>Test Webpack</h3>
+<div id="app" class="container-fluid">
+    <div id="panel" class="bg-light sidebar">Bishko</div>
+    <div id="site" class="content">Bishko</div>
+</div>
 </body>
 </html>
