--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 <div id="app" class="container-fluid">
-    <div id="panel" class="bg-light sidebar">Bishko</div>
-    <div id="site" class="content">Bishko</div>
+    <div id="panel" class="bg-light sidebar"></div>
+    <div id="site" class="content"></div>
 </div>
 </body>
 </html>
